--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -16,6 +16,8 @@
       </div>
     </form>
   </div>
+
+
   <div class="col-md-6">
     <h2>Signup</h2>
 
@@ -39,4 +41,4 @@
   </div>
 </div>
 
-<script src="./js/login.js"></script>
+<script src="/public/js/login.js"></script>
