--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -4,38 +4,36 @@
 
     <form class="form login-form">
       <div class="form-group">
-        <label for="email-login">email:</label>
-        <input class="form-input" type="text" id="email-login" />
+        <label for="username-input-login">Username</label>
+        <input class="form-input" type="text" id="username-input-login" />
       </div>
       <div class="form-group">
-        <label for="password-login">password:</label>
-        <input class="form-input" type="password" id="password-login" />
+        <label for="password-input-login" class="form-label">Password</label>
+        <input class="form-input" type="password" id="password-input-login" />
       </div>
       <div class="form-group">
-        <button class="btn btn-primary" type="submit">login</button>
+        <button class="btn btn-primary" type="submit">Login</button>
+        <a type="button" href="/signup">Sign Up</a>
       </div>
     </form>
   </div>
 
 
   <div class="col-md-6">
-    <h2>Signup</h2>
+    <h2>Sign Up</h2>
 
     <form class="form signup-form">
       <div class="form-group">
-        <label for="name-signup">name:</label>
-        <input class="form-input" type="text" id="name-signup" />
+        <label for="username-input-signup">Username</label>
+        <input class="form-input" type="text" id="username-input-signup" />
       </div>
       <div class="form-group">
-        <label for="email-signup">email:</label>
-        <input class="form-input" type="text" id="email-signup" />
+        <label for="password-input-signup">Password</label>
+        <input class="form-input" type="password" id="password-input-signup" />
       </div>
       <div class="form-group">
-        <label for="password-signup">password:</label>
-        <input class="form-input" type="password" id="password-signup" />
-      </div>
-      <div class="form-group">
-        <button class="btn btn-primary" type="submit">signup</button>
+        <button class="btn btn-primary" type="submit">Sign Up</button>
+        <a href="/login">Login</a>
       </div>
     </form>
   </div>
