--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -19,7 +19,7 @@
   </div>
 
 
-  <div class="col-md-6">
+  {{!-- <div class="col-md-6">
     <h2>Sign Up</h2>
 
     <form class="form signup-form">
@@ -36,7 +36,7 @@
         <a href="/login">Login</a>
       </div>
     </form>
-  </div>
+  </div> --}}
 </div>
 
 <script src="/public/js/login.js"></script>
