--- a/public/css/jass.css
+++ b/public/css/jass.css
@@ -1,4 +1,4 @@
-*,
+/* *,
 *::before,
 *::after {
   box-sizing: border-box;
@@ -1358,4 +1358,4 @@ form [type='radio'] {
   .align-content-center-xl {
     align-content: center;
   }
-}
+} */
