--- a/public/css/style.css
+++ b/public/css/style.css
@@ -39,7 +39,7 @@ body {
   background-color: var(--primary);
   margin: 0;
   padding: 0;
-  font-family: "Roboto Slab", serif;
+  font-family: "Helvetica", serif;
   color: var(--secondary);
   line-height: 1.5;
   font-size: 16px;
@@ -51,7 +51,7 @@ h3,
 h4,
 h5,
 h6 {
-  font-family: "Amita", cursive;
+  font-family: "Helvetica";
   font-weight: 700;
   margin: 0;
   color: var(--tertiary);
