--- a/views/allposts.handlebars
+++ b/views/allposts.handlebars
@@ -1,18 +1,27 @@
-<!-- Loop over each object in the projects array -->
-{{#each posts as |post| }}
+<div class="posts">
 
-<div>
-    <div>
+  <!-- Loop over each object in the projects array -->
+  {{#each posts as |post|}}
+
+    <div class="card">
+      <div class="card-header flex-row justify-space-between">
         <h2>
-            <a href="/post/{{id}}">{{title}}</a>
+          <a href="/post/{{id}}">{{title}}</a>
         </h2>
-    </div>
-    <div>
-        By {{User.username}} on {{format_date createdAt}}
-    </div>
-</div>
+        <div>
+          By
+          {{User.username}}
+          on
+          {{format_date createdAt}}
+        </div>
+      </div>
 
-{{!-- <div class="row mb-4 project">
+      <div class="card-body">
+        {{body}}
+      </div>
+    </div>
+
+    {{!-- <div class="row mb-4 project">
   <div class="col-md-5">
     <h2>
       <a href="/project/{{posts.id}}">{{posts.name}}</a>
@@ -26,5 +35,5 @@
   </div>
 </div> --}}
 
-
-{{/each}}
+  {{/each}}
+</div>
