--- a/views/layouts/dashboard.handlebars
+++ b/views/layouts/dashboard.handlebars
@@ -5,13 +5,13 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>The Tech Blog</title>
-    <link rel="stylesheet" href="/public/css/style.css">
-    <link rel="stylesheet" href="/public/css/jass.css">
+    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/jass.css">
 </head>
 
 <body class="flex-column min-100-vh">
-    <header>
-        <h1><a href="/">THE TECH BLOG</a></h1>
+    <header class="hero">
+        <h1 class="app-title"><a href="/">THE TECH BLOG</a></h1>
         <nav class="navbar">
         <ul class="flex-row">
             <li class="li-inline nav-item"><a href="/dashboard">Dashboard</a></li>
@@ -29,6 +29,6 @@
     </footer>
 </body>
 
-<script src="/javascript/logout.js"></script>
+<script src="./js/logout.js"></script>
 
 </html>
