--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -5,13 +5,13 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>The Tech Blog</title>
-  <link rel="stylesheet" href="/public/css/style.css">
-  <link rel="stylesheet" href="/public/css/jass.css">
+  <link rel="stylesheet" href="./css/style.css">
+  <link rel="stylesheet" href="./css/jass.css">
 </head>
 
-<body>
-  <div class="flex-column min-100-vh justify-space-around">
-    <header class="display-flex justify-space-between align-center p-2">
+<body class="flex-column min-100-vh">
+  <div>
+    <header class="hero">
       <h1 class="app-title">
         <a href="/">THE TECH BLOG</a>
       </h1>
@@ -31,7 +31,7 @@
       </nav>
     </header>
 
-    <main class="col-auto container container-fluid mt-5">
+    <main class="col-auto">
       <!-- Render the layout -->
       {{{ body }}}
     </main>
@@ -48,4 +48,4 @@
 </body>
 
 </html>
-<script src="/javascript/logout.js"></script>
+<script src="./js/logout.js"></script>
