--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,22 +1,21 @@
-<div class="row">
-  <div class="col-md-6">
+<div class="card">
+  <div class="card-header">
     <h2>Login</h2>
-
-    <form class="form login-form">
-      <div class="form-group">
-        <label for="username-input-login">Username</label>
-        <input class="form-input" type="text" id="username-input-login" />
-      </div>
-      <div class="form-group">
-        <label for="password-input-login" class="form-label">Password</label>
-        <input class="form-input" type="password" id="password-input-login" />
-      </div>
-      <div class="form-group">
-        <button class="btn btn-primary" type="submit">Login</button>
-        <a type="button" href="/signup">Sign Up</a>
-      </div>
-    </form>
   </div>
+
+  <form id="login-form" class="card-body">
+    <div class="form-group">
+      <label for="username-input-login">Username</label>
+      <input class="form-input" type="text" id="username-input-login" />
+    </div>
+    <div class="form-group">
+      <label for="password-input-login" class="form-label">Password</label>
+      <input class="form-input" type="password" id="password-input-login" />
+    </div>
+    <button class="btn btn-primary" type="submit">Login</button>
+    <a type="button" href="/signup">Sign Up</a>
+  </form>
+</div>
 
 
   {{!-- <div class="col-md-6">
@@ -37,6 +36,5 @@
       </div>
     </form>
   </div> --}}
-</div>
 
-<script src="/public/js/login.js"></script>
+<script src="./js/login.js"></script>
