--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -1,9 +1,11 @@
-<div>
-    <div class="col-md-6">
+<div class="card">
+  <div class="card-header">
     <h2>Sign Up</h2>
+  </div>
 
-    <form class="form signup-form">
-      <div class="form-group">
+  <div id="signup" role="tabpanel">
+    <form id="signup-form" class="card-body">
+      <div>
         <label for="username-input-signup">Username</label>
         <input class="form-input" type="text" id="username-input-signup" />
       </div>
@@ -11,12 +13,12 @@
         <label for="password-input-signup">Password</label>
         <input class="form-input" type="password" id="password-input-signup" />
       </div>
-      <div class="form-group">
-        <button class="btn btn-primary" type="submit">Sign Up</button>
-        <a href="/login">Login</a>
-      </div>
+      
+      <button class="btn btn-primary" type="submit">Sign Up</button>
+      <a href="/login">Login</a>
+      
     </form>
   </div>
 </div>
 
-<script src="../public/js/signup.js"></script>
+<script src="./js/signup.js"></script>
