Tries to solve dashboard issue

--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -13,7 +13,7 @@
       <input class="form-input" type="password" id="password-input-login" />
     </div>
     <button class="btn btn-primary" type="submit">Login</button>
-    <a type="button" href="/signup">Sign Up</a>
+    <a type="button" href="/signup">Sign up instead</a>
   </form>
 </div>
 
