--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -15,7 +15,7 @@
       </div>
       
       <button class="btn btn-primary" type="submit">Sign Up</button>
-      <a href="/login">Login</a>
+      <a href="/login">Login instead</a>
       
     </form>
   </div>
