Fixes typos in paths

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -5,8 +5,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>The Tech Blog</title>
-  <link rel="stylesheet" href="./css/style.css">
-  <link rel="stylesheet" href="./css/jass.css">
+  <link rel="stylesheet" href="/css/style.css">
+  <link rel="stylesheet" href="/css/jass.css">
 </head>
 
 <body class="flex-column min-100-vh">
@@ -46,6 +46,5 @@
   <script src="/public/js/logout.js"></script>
   {{/if}} --}}
 </body>
-
-</html>
 <script src="./js/logout.js"></script>
+</html>
