Gets rid of extra period in script path preventing dashboard from loading properly

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -46,5 +46,5 @@
   <script src="/public/js/logout.js"></script>
   {{/if}} --}}
 </body>
-<script src="./js/logout.js"></script>
+<script src="/js/logout.js"></script>
 </html>
