--- a/views/allposts.handlebars
+++ b/views/allposts.handlebars
@@ -1,16 +1,17 @@
 <div class="posts">
 
   <!-- Loop over each object in the projects array -->
+  {{!-- {{#each posts as |post|}} --}}
   {{#each posts as |post|}}
 
     <div class="card">
       <div class="card-header flex-row justify-space-between">
         <h2>
-          <a href="/post/{{id}}">{{title}}</a>
+          <a href="/post/{{post.id}}">{{post.title}}</a>
         </h2>
         <div>
           By
-          {{User.username}}
+          {{user.username}}
           on
           {{format_date createdAt}}
         </div>
