--- a/views/singlepost.handlebars
+++ b/views/singlepost.handlebars
@@ -3,11 +3,11 @@
         <div class="card-header flex-row justify-space-between">
             <h2>{{post.title}}</h2>
             <div>
-                Posted by {{post.User.username}} on {{format_date post.createdAt}}
+                Posted by {{post.user.username}} on {{format_date post.createdAt}}
             </div>
         </div>
         <div class="card-body">
-            {{post.body}}
+            {{post.post_body}}
         </div>
     </article>
 
